# c-defines-to-enum

./: Cargo.toml  README.md
src/: lib.rs
tests/: test.h  test.rs
